subiendo cambios en index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capacitación</title>
+    <title>Capacitaciï¿½n</title>
 </head>
 <body>
     HOLA MUNDO! 
     
     TODO BIEN?
+
+    Si y tu ? 
 </body>
 </html>
